# genocr

./: LICENSE  README.md  demoo.py  main.py  requirements.txt  test.py  train.py
cpp_core/: CMakeLists.txt
cpp_core/include/: corrector_engine.hpp  genocr.hpp  paddle_ocr_engine.hpp  paddle_utils.hpp  yolo_engine.hpp
cpp_core/src/: corrector_engine.cpp  genocr.cpp  main.cpp  paddle_ocr_engine.cpp  paddle_utils.cpp  yolo_engine.cpp
models/scripts/: exportPaddleOCR.py  exportPhi-3.py  exportYoLo.py
tests/models/: test_corrector.py  test_detector.py  test_ocr.py
tests/test_assets/: sample_document.txt
